# Greedy-Algorithms

./: CMakeLists.txt  Problem1_Greedy.cpp  Problem2_Greedy.cpp  Problem4_Greedy.cpp  problem3_Greedy.cpp  problem5_Greedy.cpp
