cmake_minimum_required(VERSION 3.29)
project(GreedyAlgorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(Problem1
    Problem1_Greedy.cpp)
add_executable(Problem2
    Problem2_Greedy.cpp)
add_executable(Problem3
    problem3_Greedy.cpp)
add_executable(Problem4
    Problem4_Greedy.cpp)
add_executable(Problem5
    problem5_Greedy.cpp)
